2006-05-12  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bump to 1.0.1

2006-05-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Bug #5628 <https://bugs.freedesktop.org/show_bug.cgi?id=5628>
	Shadow pages not created correctly when MANDIR & MANSUFFIX don't match.

2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for final X11R7 release candidate.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-11-19  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* xau.pc.in:
	Update pkgconfig files to separate library build-time dependencies
	from application build-time dependencies.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	* configure.ac:
	Use sed to put version number in man page
	Add shadow man pages for man pages that document multiple functions.
	
2005-09-21  Alan Coopersmith  <alan.coopersmith@sun.com>

	* configure.ac: 
	Set needed flags for MT-safe API's called from libXau

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* include/.cvsignore:
	Add .cvsignore files
