@@ -1,3 +1,10 @@
+2006-06-09  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* Makefile.am:
+	* Autest.c: 
+	Clean up existing Autest test program and use to provide simple
+	(and very incomplete) "make check" test case.   
+
 2006-05-12  Adam Jackson  <ajax@freedesktop.org>
 
 	* configure.ac:
